--- a/WebContent/html/sortList.html
+++ b/WebContent/html/sortList.html
@@ -6,10 +6,10 @@
     <!--默认情况下，UI布局的宽度和移动设备的宽度一致，缩放大小为原始大小-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>分类列表</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/sortList.css">
-    <link rel="stylesheet" href="icon/iconfont.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sortList.css">
+    <link rel="stylesheet" href="../icon/iconfont.css">
 </head>
 <body>
 <div class="femlieliebiao">
@@ -70,38 +70,16 @@
     <!--end-->
         <!--广告夹层-->
         <div class="guanggao">
-                <img class="jiaceng" src="images/夹层广告.jpg"/>
+                <img class="jiaceng" src="../images/夹层广告.jpg"/>
         </div>
         <!--end-->
     </div>
     <div id="list">
-    <div class="fenlei container-fluid">
+    <div class="fenlei container-fluid" id="goodsList">
+       
         <div class="row">
             <div class="col-xs-4">
-                <a href="detailPage.html"><img src="images/shop01.png" /></a>
-            </div>
-            <div class="col-xs-8">
-                <div class="lb2">
-                    <a href="detailPage.html">威古氏（VEGOOS）太阳镜女款墨镜偏光驾驶眼镜大框圆脸蛤蟆镜时尚炫彩款</a>
-                </div>
-                <div class="lb3">
-                    <strong class="J_01" data-bone="1">
-                        <em>￥139</em>
-                        <i>.00</i>
-                    </strong>
-                    <div class="pull-right">新品</div>
-                </div>
-                <div class="lb4">
-                    <span>
-                        <a id="hp1" href="#">8349条评价</a>
-                        <a id="hp2" href="#">96%好评</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4">
-                <a href="detailPage.html"><img src="images/shop02.png" /></a>
+                <a href="detailPage.html"><img src="../images/shop02.png" /></a>
             </div>
             <div class="col-xs-8">
                 <div class="lb2">
@@ -123,130 +101,12 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-xs-4">
-                <a href="detailPage.html"><img src="images/y3.jpg"/></a>
-            </div>
-            <div class="col-xs-8">
-                <div class="lb2">
-                    <a href="detailPage.html">威古氏（VEGOOS）太阳镜女款墨镜偏光驾驶眼镜大框圆脸蛤蟆镜时尚炫彩款</a>
-                </div>
-                <div class="lb3">
-                    <strong class="J_01" data-bone="1">
-                        <em>￥139</em>
-                        <i>.00</i>
-                    </strong>
-                    <div class="pull-right">新品</div>
-                </div>
-                <div class="lb4">
-                    <span>
-                        <a id="hp1" href="#">8349条评价</a>
-                        <a id="hp2" href="#">96%好评</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4">
-                <a href="detailPage.html"><img src="images/y4.jpg" /></a>
-            </div>
-            <div class="col-xs-8">
-                <div class="lb2">
-                    <a href="detailPage.html">威古氏（VEGOOS）太阳镜女款墨镜偏光驾驶眼镜大框圆脸蛤蟆镜时尚炫彩款</a>
-                </div>
-                <div class="lb3">
-                    <strong class="J_01" data-bone="1">
-                        <em>￥139</em>
-                        <i>.00</i>
-
-                    </strong>
-                    <div class="pull-right">新品</div>
-                </div>
-                <div class="lb4">
-                    <span>
-                        <a id="hp1" href="#">8349条评价</a>
-                        <a id="hp2" href="#">96%好评</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4">
-                <a href="detailPage.html"><img src="images/shop01.png"/></a>
-            </div>
-            <div class="col-xs-8">
-                <div class="lb2">
-                    <a href="detailPage.html">威古氏（VEGOOS）太阳镜女款墨镜偏光驾驶眼镜大框圆脸蛤蟆镜时尚炫彩款</a>
-                </div>
-                <div class="lb3">
-                    <strong class="J_01" data-bone="1">
-                        <em>￥139</em>
-                        <i>.00</i>
-                    </strong>
-                    <div class="pull-right">新品</div>
-                </div>
-                <div class="lb4">
-                    <span>
-                        <a id="hp1" href="#">8349条评价</a>
-                        <a id="hp2" href="#">96%好评</a>
-                    </span>
-
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4">
-                <a href="detailPage.html"><img src="images/shop01.png"/></a>
-            </div>
-            <div class="col-xs-8">
-                <div class="lb2">
-                    <a href="detailPage.html">威古氏（VEGOOS）太阳镜女款墨镜偏光驾驶眼镜大框圆脸蛤蟆镜时尚炫彩款</a>
-                </div>
-                <div class="lb3">
-                    <strong class="J_01" data-bone="1">
-                        <em>￥139</em>
-                        <i>.00</i>
-                    </strong>
-                    <div class="pull-right">新品</div>
-                </div>
-                <div class="lb4">
-                    <span>
-                        <a id="hp1" href="#">8349条评价</a>
-                        <a id="hp2" href="#">96%好评</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-4">
-                <a href="detailPage.html"><img src="images/shop01.png"/></a>
-            </div>
-            <div class="col-xs-8">
-                <div class="lb2">
-                    <a href="detailPage.html">威古氏（VEGOOS）太阳镜女款墨镜偏光驾驶眼镜大框圆脸蛤蟆镜时尚炫彩款</a>
-                </div>
-                <div class="lb3">
-                    <strong class="J_01" data-bone="1">
-                        <em>￥139</em>
-                        <i>.00</i>
-                    </strong>
-                    <div class="pull-right">新品</div>
-                </div>
-                <div class="lb4">
-                    <span>
-                        <a id="hp1" href="#">8349条评价</a>
-                        <a id="hp2" href="#">96%好评</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="row"></div>
     </div>
 </div>
 </div>
 <div style="display: none"><img src="images/1.jpg" alt=""></div>
 </body>
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/sortList.js"></script>
+<script src="../js/jquery-1.11.0.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/sortList.js"></script>
 </html>
