--- a/WebContent/html/evaluate.html
+++ b/WebContent/html/evaluate.html
@@ -6,7 +6,7 @@
     <title>评价中心</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="icon/iconfont.css">
-    <link rel="stylesheet" href="css/evaluate.css">
+    <link rel="stylesheet" href="../css/evaluate.css">
 </head>
 <body>
 <div id="wrap">
