--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>首页</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="icon/iconfont.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <style>
         p{margin:0 0 0 0;}
         #bottom{position:relative;margin-left:15px;margin-right:15px;height:60px;}
