--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -169,7 +169,7 @@
 					<i class="iconfont icon-gouwuche" style="font-size: 20px;"></i>
 					<p>购物车</p>
 				</div>
-				<div class="col-xs-2">
+				<div class="col-xs-2" id="myHome">
 					<i class="iconfont icon-wode color" style="font-size: 20px;"></i>
 					<p class="color">我的</p>
 				</div>
