--- a/WebContent/html/myHome.html
+++ b/WebContent/html/myHome.html
@@ -7,9 +7,9 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <meta charset="UTF-8">
     <title>我的首页</title>
-    <link rel="stylesheet" href="icon/iconfont.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/myHome.css">
+    <link rel="stylesheet" href="../icon/iconfont.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/myHome.css">
 </head>
 <body>
 <div id="wrap" class="container">
@@ -63,12 +63,12 @@
             <p class="color">我的特权</p>
         </div>
         <div class="col-xs-3" style="margin-top:10px;">
-            <p class="linehight" style="margin-bottom: 0px;"><img src="images/03-sing.png" class="img-responsive center-block" style="width:32px;height:32px;"></p>
+            <p class="linehight" style="margin-bottom: 0px;"><img src="../images/03-sing.png" class="img-responsive center-block" style="width:32px;height:32px;"></p>
             <p>每日签到</p>
         </div>
     </div>
     <div style="margin-top:19px;">
-        <div style="margin-bottom: 2px;"><img src="images/logo1.jpg" alt="" class="img-responsive center-block"></div>
+        <div style="margin-bottom: 2px;"><img src="../images/logo1.jpg" alt="" class="img-responsive center-block"></div>
         <div><img src="images/logo1.jpg" alt="" class="img-responsive center-block"></div>
     </div>
     <div style="height:59px;width:100%;"></div>
@@ -103,7 +103,7 @@
     </nav>
 </div>
 </body>
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/myHome.js"></script>
+<script src="../js/jquery-3.2.1.min.js"></script>
+<script src="../js/bootstrap.js"></script>
+<script src="../js/myHome.js"></script>
 </html>
