--- a/WebContent/html/inputVal.html
+++ b/WebContent/html/inputVal.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--默认情况下、UI布局的宽度和移动设备的宽度一致，缩放大小为原始大小-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta charset="UTF-8">
-    <title>输入验证</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="icon/iconfont.css">
-    <link rel="stylesheet" href="css/inputVal.css">
-
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!--默认情况下、UI布局的宽度和移动设备的宽度一致，缩放大小为原始大小-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+<meta charset="UTF-8">
+<title>输入验证</title>
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../icon/iconfont.css">
+<link rel="stylesheet" href="../css/inputVal.css">
 </head>
 <body>
-<div id="wrap">
+	<div id="wrap">
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="header">
-        <span class="top" id="topleft">
-            <a href="#"><i class="iconfont icon-toLeft-copy rleft" style="color:#000;"></i></a>
-        </span>
-            <span class="top topright">手机快速注册</span>
-        </div>
+		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="header">
+				<span class="top" id="topleft"> <a href="#"><i
+						class="iconfont icon-toLeft-copy rleft" style="color: #000;"></i></a>
+				</span> <span class="top topright">手机快速注册</span>
+			</div>
 
-    </nav>
+		</nav>
 
-    <div style="width:100%;height:66px;background:#fff;"></div>
-    <div class="container-fluid" id="main">
-        <div class="has-feedback form-group" id="content">
-            <label  class="control-label">请输入<span id="tel">17798236458</span>收到的验证码</label>
+		<div style="width: 100%; height: 66px; background: #fff;"></div>
+		<div class="container-fluid" id="main">
+			<div class="has-feedback form-group" id="content">
+				<label class="control-label">请输入<span id="tel">17798236458</span>收到的验证码
+				</label>
 
-            <div class="form-group" id="input_btn">
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" placeholder="请输入验证码" id="inp">
-                </div>
-                <button type="button" class="btn btn-default col-xs-4" style="color: #d0d0d0">
-                    重新发送(<span>116</span>)
-                </button>
-            </div>
-        </div>
-        <div class="form-group"style="margin-top:95px;height:50px;">
-            <button id="btn" class="btn btn-default btn-block" disabled="disabled">下一步</button>
-        </div>
-        <div>
-            <span style="font-size: 14px">遇到问题？您可以<a href="#"><u>联系客服</u></a>。</span>
-        </div>
-    </div>
-</div>
+				<div class="form-group" id="input_btn">
+					<div class="col-xs-8">
+						<input type="text" class="form-control" placeholder="请输入验证码"
+							id="inp">
+					</div>
+					<button type="button" class="btn btn-default col-xs-4"
+						style="color: #d0d0d0">
+						重新发送(<span>116</span>)
+					</button>
+				</div>
+			</div>
+			<div class="form-group" style="margin-top: 95px; height: 50px;">
+				<button id="btn" class="btn btn-default btn-block"
+					disabled="disabled">下一步</button>
+			</div>
+			<div>
+				<span style="font-size: 14px">遇到问题？您可以<a href="#"><a href="tel:8000-6000-0000">客户服务</a></a>。
+				</span>
+			</div>
+		</div>
+	</div>
 </body>
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/inputVal.js"></script>
+<script src="../js/jquery-3.2.1.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/inputVal.js"></script>
 </html>
